fix: Authorization in swagger UI and used Post for get payloads
