# docs/swagger.json
@@ -6,7 +6,6 @@
         "contact": {},
         "version": "1.0"
     },
-    "basePath": "/",
     "paths": {
         "/api/msg/add-user": {
             "put": {
@@ -313,6 +312,12 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/schema.DocNormalResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Permission denied",
                         "schema": {
                             "$ref": "#/definitions/schema.DocNormalResponse"
                         }
@@ -1357,7 +1362,7 @@
             }
         },
         "/api/post/tags": {
-            "get": {
+            "post": {
                 "security": [
                     {
                         "BearerAuth": []
@@ -2165,7 +2170,7 @@
             }
         },
         "/api/user/search": {
-            "get": {
+            "post": {
                 "security": [
                     {
                         "BearerAuth": []
@@ -2674,6 +2679,52 @@
                 }
             }
         },
+        "/api/user/view-friend": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "An endpoint for viewing all the friends for the currently logged in user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "View all friends for the logged in user",
+                "responses": {
+                    "200": {
+                        "description": "User friends fetched",
+                        "schema": {
+                            "$ref": "#/definitions/schema.DocViewFriends"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized user",
+                        "schema": {
+                            "$ref": "#/definitions/schema.DocNormalResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Record not found",
+                        "schema": {
+                            "$ref": "#/definitions/schema.DocNormalResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/schema.DocNormalResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/user/view-git": {
             "get": {
                 "security": [
@@ -2800,7 +2851,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "An endpoint for viewing all the friends for the currently logged in user",
+                "description": "An endpoint for viewing all the friends of a user",
                 "consumes": [
                     "application/json"
                 ],
@@ -2810,12 +2861,27 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "View all friends for the logged in user",
+                "summary": "View all friends of a user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "User friends fetched",
                         "schema": {
                             "$ref": "#/definitions/schema.DocViewFriends"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid id",
+                        "schema": {
+                            "$ref": "#/definitions/schema.DocNormalResponse"
                         }
                     },
                     "401": {
@@ -2945,7 +3011,7 @@
             }
         },
         "/forgot-password": {
-            "get": {
+            "post": {
                 "description": "An endpoint for getting an otp for reseting the user password",
                 "consumes": [
                     "application/json"
@@ -3144,13 +3210,11 @@
                 "summary": "Verify Sent otp to reset password",
                 "parameters": [
                     {
+                        "type": "string",
                         "description": "otp",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/schema.VerifyOTP"
-                        }
+                        "name": "id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -3160,14 +3224,14 @@
                             "$ref": "#/definitions/schema.DocTokenResponse"
                         }
                     },
-                    "404": {
+                    "400": {
                         "description": "invalid otp",
                         "schema": {
                             "$ref": "#/definitions/schema.DocNormalResponse"
                         }
                     },
-                    "422": {
-                        "description": "invalid otp format",
+                    "404": {
+                        "description": "invalid otp",
                         "schema": {
                             "$ref": "#/definitions/schema.DocNormalResponse"
                         }
@@ -3828,17 +3892,6 @@
                 }
             }
         },
-        "schema.VerifyOTP": {
-            "type": "object",
-            "required": [
-                "otp"
-            ],
-            "properties": {
-                "otp": {
-                    "type": "string"
-                }
-            }
-        },
         "schema.ViewChat": {
             "type": "object",
             "properties": {
@@ -3926,6 +3979,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
